--- a/index.html
+++ b/index.html
@@ -10,109 +10,115 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="">Web Studio</a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+    <!-- header -->
+    <header class="header">
+        <nav class="header-nav">
+            <a class="header-a link" href="">Web Studio</a>
+            <ul class="header-list list">
+                <li class="header-item"><a class="link header-link" href="">Студия</a></li>
+                <li class="header-item"><a class="link header-link" href="">Портфолио</a></li>
+                <li class="header-item"><a class="link header-link" href="">Контакты</a></li>
             </ul>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+380961111111</a></li>
+            <ul class="list">
+                <li><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link header-tel" href="tel:+380961111111">+380961111111</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <div>
-            <section>
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
+            <!-- hero -->
+            <section class="hero">
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                <button type="button" class="hero-btn">Заказать услугу</button>
             </section>
         </div>
-        <section>
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>
+        <!-- about -->
+        <section class="about">
+            <ul class="list about-list">
+                <li class="about-item">
+                    <h3 class="about-title">Внимание к деталям</h3>
+                    <p class="about-exemp-title">
                         Идейные соображения, а также начало повседневной
                         работы по формированию позиции.
                     </p>
                 </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                    <p>
+                <li class="about-item">
+                    <h3 class="about-title">Пунктуальность</h3>
+                    <p class="about-exemp-title">
                         Задача организации, в особенности же рамки и место
                         обучения кадров влечет за собой.
                     </p>
                 </li>
-                <li>
-                    <h3>Планирование</h3>
-                    <p>
+                <li class="about-item">
+                    <h3 class="about-title">Планирование</h3>
+                    <p class="about-exemp-title">
                         Равным образом консультация с широким активом в
                         значительной степени обуславливает.
                     </p>
                 </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                    <p>
+                <li class="about-item">
+                    <h3 class="about-title">Современные технологии</h3>
+                    <p  class="about-exemp-title">
                         Значимость этих проблем настолько очевидна,
                         что реализация плановых заданий.
                     </p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-             <li>
+        <!-- basic -->
+        <section class="basic">
+            <h2 class="basic-title">Чем мы занимаемся</h2>
+            <ul class="list basic-list">
+             <li class="basic-item">
                 <img src="./images/image.clas1.jpg" alt="ноутбук" width="370" height="294" />
             </li>
-            <li>
+            <li class="basic-item">
                 <img src="./images/image.clas2.jpg" alt="смартфон" width="370" height="294" />
             </li>
-            <li>
+            <li class="basic-item">
                 <img src="./images/image.clas3.jpg" alt="планшет" width="370" height="294" />
             </li>
                 </ul>
         </section>
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
+        <!-- team -->
+        <section class="team">
+            <h2 class="team-title">Наша команда</h2>
+            <ul class="list team-list">
+                <li class="team-item">
                     <img src="./images/img.t1.jpg" alt="" width="270" height="260" />
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <h3 class="team-title">Игорь Демьяненко</h3>
+                    <p class="item-profil" lang="en">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/img.t2.jpg" alt="" width="270" height="260" />
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <h3 class="team-title">Ольга Репина</h3>
+                    <p class="item-profil" lang="en">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/img.t3.jpg" alt="" width="270" height="260" />
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <h3 class="team-title">Николай Тарасов</h3>
+                    <p class="item-profil" lang="en">Marketing</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/img.t4.jpg" alt="" width="270" height="260" />
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <h3 class="team-title">Михаил Ермаков</h3>
+                    <p class="item-profil" lang="en">UI Designer</p>
                 </li>
              </ul>
             </section>
         </main>
-       
-                 <footer>
+              <!-- footer -->
+                 <footer class="footer">
                      <p>&#127970;</p>
-            <a lang="en">WebStudio</a>
             <address>
-                <ul>
-                    <li><a href="https://goo.gl/maps/ff1c4DkWbciWskJk6" target="_blank" rel="noopener noreferrer">
+                <a class="link" lang="en">WebStudio</a>
+                <a class="link"ddress>
+                <ul class="list">
+                    <li><a class="link" href="https://goo.gl/maps/ff1c4DkWbciWskJk6" target="_blank" rel="noopener noreferrer">
                             г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li><a href="mailto:info@example.com">info@example.com</a></li>
-                    <li><a href="tel:+380991111111">+380991111111</a></li>
+                    <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a class="link" href="tel:+380991111111">+380991111111</a></li>
                 </ul>
             </address>
         </footer>
