--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -13,7 +17,7 @@
     <!-- header -->
     <header class="header">
         <nav class="header-nav">
-            <a class="header-a link" href="">Web Studio</a>
+            <a class="header-logo link" href="">Web<span>Studio</span></a>
             <ul class="header-list list">
                 <li class="header-item"><a class="link header-link" href="">Студия</a></li>
                 <li class="header-item"><a class="link header-link" href="">Портфолио</a></li>
@@ -87,22 +91,22 @@
             <ul class="list team-list">
                 <li class="team-item">
                     <img src="./images/img.t1.jpg" alt="" width="270" height="260" />
-                    <h3 class="team-title">Игорь Демьяненко</h3>
+                    <h3 class="team-title-name">Игорь Демьяненко</h3>
                     <p class="item-profil" lang="en">Product Designer</p>
                 </li>
                 <li class="team-item">
                     <img src="./images/img.t2.jpg" alt="" width="270" height="260" />
-                    <h3 class="team-title">Ольга Репина</h3>
+                    <h3 class="team-title-name">Ольга Репина</h3>
                     <p class="item-profil" lang="en">Frontend Developer</p>
                 </li>
                 <li class="team-item">
                     <img src="./images/img.t3.jpg" alt="" width="270" height="260" />
-                    <h3 class="team-title">Николай Тарасов</h3>
+                    <h3 class="team-title-name">Николай Тарасов</h3>
                     <p class="item-profil" lang="en">Marketing</p>
                 </li>
                 <li class="team-item">
                     <img src="./images/img.t4.jpg" alt="" width="270" height="260" />
-                    <h3 class="team-title">Михаил Ермаков</h3>
+                    <h3 class="team-title-name">Михаил Ермаков</h3>
                     <p class="item-profil" lang="en">UI Designer</p>
                 </li>
              </ul>
@@ -112,13 +116,13 @@
                  <footer class="footer">
                      <p>&#127970;</p>
             <address>
-                <a class="link" lang="en">WebStudio</a>
+                <a class="link footer-logo" lang="en">Web<span>Studio</span></a>
                 <a class="link"ddress>
                 <ul class="list">
-                    <li><a class="link" href="https://goo.gl/maps/ff1c4DkWbciWskJk6" target="_blank" rel="noopener noreferrer">
+                    <li><a class="link footar-location" href="https://goo.gl/maps/ff1c4DkWbciWskJk6" target="_blank" rel="noopener noreferrer">
                             г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-                    <li><a class="link" href="tel:+380991111111">+380991111111</a></li>
+                    <li><a class="link footer-mail" href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a class="link footer-tel" href="tel:+380991111111">+380991111111</a></li>
                 </ul>
             </address>
         </footer>
