--- a/portfolio.html
+++ b/portfolio.html
@@ -5,74 +5,81 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="">Web Studio</a>
-            <ul class="list">
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+    <!-- header -->
+    <header class="header">
+        <nav class="header-nav">
+            <a href="" class="header-logo link">Web Studio</a>
+            <ul class="list header-list">
+                <li class="header-item"><a class="link header-link" href="">Студия</a></li>
+                <li class="header-item"><a class="link header-link" href="">Портфолио</a></li>
+                <li class="header-item"><a class="link header-link" href="">Контакты</a></li>
             </ul>
-            <ul class="list">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+380961111111</a></li>
+            <ul class="list header-list">
+                <li class="header-item"><a class="link header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-item"><a class="link header-link" href="tel:+380961111111">+380961111111</a></li>
             </ul>
         </nav>
-        <ul>
-            <button type="button">Все</button>
-            <button type="button">Веб-сайты</button>
-            <button type="button">Приложения</button>
-            <button type="button">Дизайн</button>
-            <button type="button">Маркетинг</button>
-        </ul>
-        <ul>
-            <li>
-                <img src="./images/portf1.jpg" alt="" width="370" height="294"
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p>
+        <!-- btn -->
+        <section class="button">
+            <button type="button" class="btn">Все</button>
+            <button type="button" class="btn">Веб-сайты</button>
+            <button type="button" class="btn">Приложения</button>
+            <button type="button" class="btn">Дизайн</button>
+            <button type="button" class="btn">Маркетинг</button>
+        </section>
+        <!-- hero -->
+        <ul class="hero">
+            <li class="hero-post list">
+            <img src="./images/portf1.jpg" alt="" width="370" height="294"
+                <h2 class="hero-title">Технокряк</h2>
+                <p class="hero-exemp-title">Веб-сайт</p>
             </li>
-            <li>
-                <img src="./images/portf2.jpg" alt="" width="370" height="294" 
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+            <li class="hero-post list">
+            <img src="./images/portf2.jpg" alt="" width="370" height="294" 
+                <h2 class="hero-title">Постер New Orlean vs Golden Star</h2>
+                <p class="hero-exemp-title">Дизайн</p>
             </li>
-            <li>
+            <li class="hero-post list">
                 <img src="./images/portf3.jpg" alt="" width="370" height="294" 
-                <h2>Ресторан Seafood</h2>
-                <p>Приложение</p>
+                <h2 class="hero-title">Ресторан Seafood</h2>
+                <p class="hero-exemp-title">Приложение</p>
             </li>
-            <li>
+            <li class="hero-post list">
                 <img src="./images/portf4.jpg" alt="" width="370" height="294" 
-                <h2>Проект Prime</h2>
-                <p>Маркетинг</p>
+                <h2 class="hero-title">Проект Prime</h2>
+                <p class="hero-exemp-title">Маркетинг</p>
             </li>
-            <li>
+            <li class="hero-post list">
                 <img src="./images/portf5.jpg" alt="" width="370" height="294" 
-                <h2>Проект Boxes</h2>
-                <p>Приложение</p>
+                <h2 class="hero-title">Проект Boxes</h2>
+                <p class="hero-exemp-title">Приложение</p>
             </li>
-            <li>
+            <li class="hero-post list">
                 <img src="./images/portf6.jpg" alt="" width="370" height="294" 
-                <h2>Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+                <h2 class="hero-title">Inspiration has no Borders</h2>
+                <p class="hero-exemp-title">Веб-сайт</p>
             </li>
-            <li>
+            <li class="hero-post list">
                 <img src="./images/portf7.jpg" alt="" width="370" height="294"
-                <h2>Издание Limited Edition</h2>
-                <p>Дизайн</p>
+                <h2 class="hero-title">Издание Limited Edition</h2>
+                <p class="hero-exemp-title">Дизайн</p>
             </li>
-            <li>
+            <li class="hero-post list">
                 <img src="./images/portf8.jpg" alt="" width="370" height="294" 
-                <h2>Проект LAB</h2>
-                <p>Маркетинг</p>
+                <h2 class="hero-title">Проект LAB</h2>
+                <p class="hero-exemp-title">Маркетинг</p>
             </li>
-            <li>
+            <li class="hero-post list">
                 <img src="./images/portf9.jpg" alt="" width="370" height="294" 
-                <h2>Growing Business</h2>
-                <p>Приложение</p>
+                <h2 class="hero-title">Growing Business</h2>
+                <p class="hero-exemp-title">Приложение</p>
             </li>
             
         </ul>
