ніби все крім спана

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,50 +35,50 @@
             <button type="button" class="btn">Маркетинг</button>
         </section>
         <!-- hero -->
-        <ul class="hero">
+        <ul class="hero-portfolio">
             <li class="hero-post list">
             <img src="./images/portf1.jpg" alt="" width="370" height="294"
-                <h2 class="hero-title">Технокряк</h2>
+                <h2 class="hero-title-portfolio">Технокряк</h2>
                 <p class="hero-exemp-title">Веб-сайт</p>
             </li>
             <li class="hero-post list">
             <img src="./images/portf2.jpg" alt="" width="370" height="294" 
-                <h2 class="hero-title">Постер New Orlean vs Golden Star</h2>
+                <h2 lang="en" class="hero-title-portfolio">Постер New Orlean vs Golden Star</h2>
                 <p class="hero-exemp-title">Дизайн</p>
             </li>
             <li class="hero-post list">
                 <img src="./images/portf3.jpg" alt="" width="370" height="294" 
-                <h2 class="hero-title">Ресторан Seafood</h2>
+                <h2 lang="en" class="hero-title-portfolio">Ресторан Seafood</h2>
                 <p class="hero-exemp-title">Приложение</p>
             </li>
             <li class="hero-post list">
                 <img src="./images/portf4.jpg" alt="" width="370" height="294" 
-                <h2 class="hero-title">Проект Prime</h2>
+                <h2 lang="en" class="hero-title-portfolio">Проект Prime</h2>
                 <p class="hero-exemp-title">Маркетинг</p>
             </li>
             <li class="hero-post list">
                 <img src="./images/portf5.jpg" alt="" width="370" height="294" 
-                <h2 class="hero-title">Проект Boxes</h2>
+                <h2 lang="en" class="hero-title-portfolio">Проект Boxes</h2>
                 <p class="hero-exemp-title">Приложение</p>
             </li>
             <li class="hero-post list">
                 <img src="./images/portf6.jpg" alt="" width="370" height="294" 
-                <h2 class="hero-title">Inspiration has no Borders</h2>
+                <h2 lang="en" class="hero-title-portfolio">Inspiration has no Borders</h2>
                 <p class="hero-exemp-title">Веб-сайт</p>
             </li>
             <li class="hero-post list">
                 <img src="./images/portf7.jpg" alt="" width="370" height="294"
-                <h2 class="hero-title">Издание Limited Edition</h2>
+                <h2 lang="en" class="hero-title-portfolio">Издание Limited Edition</h2>
                 <p class="hero-exemp-title">Дизайн</p>
             </li>
             <li class="hero-post list">
                 <img src="./images/portf8.jpg" alt="" width="370" height="294" 
-                <h2 class="hero-title">Проект LAB</h2>
+                <h2 lang="en" class="hero-title-portfolio">Проект LAB</h2>
                 <p class="hero-exemp-title">Маркетинг</p>
             </li>
             <li class="hero-post list">
                 <img src="./images/portf9.jpg" alt="" width="370" height="294" 
-                <h2 class="hero-title">Growing Business</h2>
+                <h2 lang="en" class="hero-title-portfolio">Growing Business</h2>
                 <p class="hero-exemp-title">Приложение</p>
             </li>
             
@@ -87,14 +87,14 @@
         <footer class="footer">
             <p>&#127970;</p>
             <address>
-                <a class="link" lang="en">WebStudio</a>
+                <a class="link footer-logo" lang="en">Web<span>Studio</span></a>
                 <a class="link" ddress>
                     <ul class="list">
-                        <li><a class="link" href="https://goo.gl/maps/ff1c4DkWbciWskJk6" target="_blank"
+                        <li><a class="link footar-location" href="https://goo.gl/maps/ff1c4DkWbciWskJk6" target="_blank"
                                 rel="noopener noreferrer">
                                 г. Киев, пр-т Леси Украинки, 26</a></li>
-                        <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-                        <li><a class="link" href="tel:+380991111111">+380991111111</a></li>
+                        <li><a class="link footer-mail" href="mailto:info@example.com">info@example.com</a></li>
+                        <li><a class="link footer-tel" href="tel:+380991111111">+380991111111</a></li>
                     </ul>
             </address>
         </footer>
