--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                      <p>&#127970;</p>
             <address>
                 <a class="link footer-logo" lang="en">Web<span>Studio</span></a>
-                <a class="link"ddress>
+                <a class="link">
                 <ul class="list">
                     <li><a class="link footar-location" href="https://goo.gl/maps/ff1c4DkWbciWskJk6" target="_blank" rel="noopener noreferrer">
                             г. Киев, пр-т Леси Украинки, 26</a></li>
