--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
         <nav class="header-nav">
             <a href="" class="header-logo link">Web Studio</a>
             <ul class="list header-list">
-                <li class="header-item"><a class="link header-link" href="../index.html">Студия</a></li>
+                <li class="header-item"><a class="link header-link" href="/index.html">Студия</a></li>
                 <li class="header-item"><a class="link header-link" href="">Портфолио</a></li>
                 <li class="header-item"><a class="link header-link" href="">Контакты</a></li>
             </ul>
