--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a class="header-logo link" href="">Web<span>Studio</span></a>
             <ul class="header-list list">
                 <li class="header-item"><a class="link header-link" href="">Студия</a></li>
-                <li class="header-item"><a class="link header-link" href="./portfolio.html">Портфолио</a></li>
+                <li class="header-item"><a class="link header-link" href="/portfolio.html">Портфолио</a></li>
                 <li class="header-item"><a class="link header-link" href="">Контакты</a></li>
             </ul>
             <ul class="list">
