--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <!-- header -->
     <header class="header">
         <nav class="header-nav">
-            <a href="" class="header-logo link">WebStudio</a>
+            <a href="/index.html" class="header-logo link">Web<span></span>Studio</span></a>
             <ul class="list header-list">
                 <li class="header-item"><a class="link header-link" href="/index.html">Студия</a></li>
                 <li class="header-item"><a class="link header-link" href="">Портфолио</a></li>
