--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <!-- header -->
     <header class="header">
         <nav class="header-nav">
-            <a href="/index.html" class="header-logo link">Web<span></span>Studio</span></a>
+            <a href="/index.html" class="header-logo link">Web<span class="logo-studio-b">Studio</span></a>
             <ul class="list header-list">
                 <li class="header-item"><a class="link header-link" href="/index.html">Студия</a></li>
                 <li class="header-item"><a class="link header-link" href="">Портфолио</a></li>
@@ -87,9 +87,9 @@
         <footer class="footer">
             <p>&#127970;</p>
             <address>
-                <a class="link footer-logo" lang="en">Web<span>Studio</span></a>
+                <a class="link footer-logo" lang="en">Web<span class="logo-studio-w">Studio</span></a>
                 <ul class="list">
-                    <li><a class="link footar-location" href="https://goo.gl/maps/ff1c4DkWbciWskJk6" target="_blank"
+                    <li><a class="link footer-location" href="https://goo.gl/maps/ff1c4DkWbciWskJk6" target="_blank"
                             rel="noopener noreferrer">
                             г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li><a class="link footer-mail" href="mailto:info@example.com">info@example.com</a></li>
