--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- header -->
     <header class="header">
         <nav class="header-nav">
-            <a class="header-logo link" href="">Web<span>Studio</span></a>
+            <a class="header-logo link" href="">Web<span class="logo-studio-b">Studio</span></a>
             <ul class="header-list list">
                 <li class="header-item"><a class="link header-link" href="">Студия</a></li>
                 <li class="header-item"><a class="link header-link" href="/portfolio.html">Портфолио</a></li>
@@ -116,9 +116,9 @@
                  <footer class="footer">
                      <p>&#127970;</p>
             <address>
-                <a class="link footer-logo" lang="en">Web<span>Studio</span></a>
+                <a class="link footer-logo" lang="en">Web<span class="logo-studio-w">Studio</span></a>
                 <ul class="list">
-                    <li><a class="link footar-location" href="https://goo.gl/maps/ff1c4DkWbciWskJk6" target="_blank" rel="noopener noreferrer">
+                    <li><a class="link footer-location" href="https://goo.gl/maps/ff1c4DkWbciWskJk6" target="_blank" rel="noopener noreferrer">
                             г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li><a class="link footer-mail" href="mailto:info@example.com">info@example.com</a></li>
                     <li><a class="link footer-tel" href="tel:+380991111111">+380991111111</a></li>
