--- a/portfolio.html
+++ b/portfolio.html
@@ -22,66 +22,66 @@
                 <li class="header-item"><a class="link header-link" href="">Контакты</a></li>
             </ul>
             <ul class="list header-list">
-                <li class="header-item"><a class="link header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-item"><a class="link header-link" href="tel:+380961111111">+380961111111</a></li>
+                <li class="header-item"><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-item"><a class="link header-tel" href="tel:+380961111111">+380961111111</a></li>
             </ul>
         </nav>
         <!-- btn -->
         <section class="button">
-            <h2>
+            <h1>
                 <button type="button" class="btn">Все</button>
                 <button type="button" class="btn">Веб-сайты</button>
                 <button type="button" class="btn">Приложения</button>
                 <button type="button" class="btn">Дизайн</button>
                 <button type="button" class="btn">Маркетинг</button>
-            </h2>
+            </h1>
         </section>
         <!-- hero -->
         <section class="hero-portfolio">
             <ul class="list"> 
                 <li class="hero-post list">
                 <img src="./images/portf1.jpg" alt="" width="370" height="294" />  
-                   <h3 class="hero-title-portfolio">Технокряк</h3>
+                   <h2 class="hero-title-portfolio">Технокряк</h2>
                     <p class="hero-exemp-title">Веб-сайт</p>
                 </li>
                 <li class="hero-post list">
                 <img src="./images/portf2.jpg" alt="" width="370" height="294" />
-                    <h3 class="hero-title-portfolio">Постер New Orlean vs Golden Star</h3>
+                    <h2 class="hero-title-portfolio">Постер New Orlean vs Golden Star</h2>
                     <p class="hero-exemp-title">Дизайн</p>
                 </li>
                 <li class="hero-post list">
                     <img src="./images/portf3.jpg" alt="" width="370" height="294" />
-                    <h3 lang="en" class="hero-title-portfolio">Ресторан Seafood</h3>
+                    <h2 lang="en" class="hero-title-portfolio">Ресторан Seafood</h2>
                     <p class="hero-exemp-title">Приложение</p>
                 </li>
                     <li class="hero-post list">
                     <img src="./images/portf4.jpg" alt="" width="370" height="294" />
-                    <h3 lang="en" class="hero-title-portfolio">Проект Prime</h3>
+                    <h2 lang="en" class="hero-title-portfolio">Проект Prime</h2>
                     <p class="hero-exemp-title">Маркетинг</p>
                 </li>
                     <li class="hero-post list">
                     <img src="./images/portf5.jpg" alt="" width="370" height="294" />
-                    <h3 lang="en" class="hero-title-portfolio">Проект Boxes</h3>
+                    <h2 lang="en" class="hero-title-portfolio">Проект Boxes</h2>
                     <p class="hero-exemp-title">Приложение</p>
                 </li>
                 <li class="hero-post list">
                     <img src="./images/portf6.jpg" alt="" width="370" height="294" /> 
-                    <h3 lang="en" class="hero-title-portfolio">Inspiration has no Borders</h3>
+                    <h2 lang="en" class="hero-title-portfolio">Inspiration has no Borders</h2>
                     <p class="hero-exemp-title">Веб-сайт</p>
                 </li>
                 <li class="hero-post list">
                     <img src="./images/portf7.jpg" alt="" width="370" height="294" />
-                    <h3 lang="en" class="hero-title-portfolio">Издание Limited Edition</h3>
+                    <h2 lang="en" class="hero-title-portfolio">Издание Limited Edition</h2>
                     <p class="hero-exemp-title">Дизайн</p>
                 </li>
                 <li class="hero-post list">
                     <img src="./images/portf8.jpg" alt="" width="370" height="294" />
-                    <h3 lang="en" class="hero-title-portfolio">Проект LAB</h3>
+                    <h2 lang="en" class="hero-title-portfolio">Проект LAB</h2>
                     <p class="hero-exemp-title">Маркетинг</p>
                 </li>
                 <li class="hero-post list">
                     <img src="./images/portf9.jpg" alt="" width="370" height="294" />
-                    <h3 lang="en" class="hero-title-portfolio">Growing Business</h3>
+                    <h2 lang="en" class="hero-title-portfolio">Growing Business</h2>
                     <p class="hero-exemp-title">Приложение</p>
                 </li>
                 
